force-app/main/default/objects/bpats__Interview_Template_Detail__c/bpats__Interview_Template_Detail__c.object-meta.xml
<CustomObject>
    <label>Interview Template Detail</label>
    <nameField>
        <label>Interview Template Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interview Template Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>