force-app/main/default/objects/bpats__Interview_Template_Detail__c/fields/bpats__Field_to_display__c.field-meta.xml
<CustomField>
    <fullName>bpats__Field_to_display__c</fullName>
    <label>Fields to display</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>