force-app/main/default/objects/bpats__Interview_Template_Detail__c/fields/bpats__Fields_to_Display_Same_as_Template__c.field-meta.xml
<CustomField>
    <fullName>bpats__Fields_to_Display_Same_as_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fields to Display Same as Template</label>
    <type>Checkbox</type>
</CustomField>