force-app/main/default/objects/bpats__Interview_Template_Detail__c/fields/bpats__Interview_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>bpats__Interview_Plan_Template__c</fullName>
    <label>Interview Plan Template</label>
    <referenceTo>bpats__Interview_Template__c</referenceTo>
    <relationshipLabel>Interview Template Details</relationshipLabel>
    <relationshipName>Interview_Template_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>