force-app/main/default/objects/bpats__Interview_Template_Detail__c/fields/bpats__Stage__c.field-meta.xml
<CustomField>
    <fullName>bpats__Stage__c</fullName>
    <label>Stage #</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>